RESOLVED FIXED83499
[BlackBerry] requestAnimationFrame performance choppy & inconsistent
https://bugs.webkit.org/show_bug.cgi?id=83499
Summary [BlackBerry] requestAnimationFrame performance choppy & inconsistent
Andrew Lo
Reported 2012-04-09 12:44:22 PDT
Reproduction: 1. http://webstuff.nfshost.com/anim-timing/raftime.html 2. Slide delay slider to the right to add delay to each frame. Notice that when moving the slider slightly, performance becomes extremely choppy. Much choppier than it should be given the reported FPS. Also much choppier than it should be given the delay. When you slide the delay slider, it should get choppier since you are lowering frame rate. However, the choppiness should be consistent, meaning the same time interval between frames. The bug is that it is inconsistent and stutters. When this is performing correctly, it should transition smoothly to being more choppy as you move the slider to the right. The FPS should reflect the amount of choppiness you see, and the choppiness should be consistent.
Attachments
Patch (1.71 KB, patch)
2012-04-09 13:23 PDT, Andrew Lo
no flags
Patch (1.71 KB, patch)
2012-04-09 13:38 PDT, Andrew Lo
no flags
Andrew Lo
Comment 1 2012-04-09 13:23:37 PDT
Rob Buis
Comment 2 2012-04-09 13:30:55 PDT
Comment on attachment 136292 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=136292&action=review Looks good, but fix ChangeLog first please :) > Source/WebCore/ChangeLog:10 > + Reviewed by NOBODY (OOPS!). The reviewed by line should go between bug/title and explanation.
Andrew Lo
Comment 3 2012-04-09 13:38:31 PDT
Rob Buis
Comment 4 2012-04-09 13:52:31 PDT
Comment on attachment 136296 [details] Patch Looks good.
WebKit Review Bot
Comment 5 2012-04-09 17:01:19 PDT
Comment on attachment 136296 [details] Patch Clearing flags on attachment: 136296 Committed r113644: <http://trac.webkit.org/changeset/113644>
WebKit Review Bot
Comment 6 2012-04-09 17:01:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.