[BlackBerry] requestAnimationFrame performance choppy & inconsistent https://bugs.webkit.org/show_bug.cgi?id=83499

Patch by Andrew Lo <anlo@rim.com> on 2012-04-09
Reviewed by Rob Buis.

Respect m_scheduled & m_previousFrameDone flags like the Mac port of
DisplayRefreshMonitor does.
Internal PR: 147826

requestAnimationFrame already covered by tests in LayoutTests/fast/animation.

* platform/graphics/blackberry/DisplayRefreshMonitorBlackBerry.cpp:
(WebCore::DisplayRefreshMonitor::displayLinkFired):

Canonical link: https://commits.webkit.org/100954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113644 268f45cc-cd09-0410-ab3c-d52691b4dbfc